[gd_scene load_steps=2 format=3 uid="uid://udtf08cdaeph"]

[ext_resource type="Script" uid="uid://b76a6a7u88iba" path="res://menu.gd" id="1_lti8b"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lti8b")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 149.0
offset_bottom = 54.0
scale = Vector2(12.9142, 20.0596)
color = Color(0.861843, 0.722628, 0.507582, 0.580392)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 581.0
offset_top = 42.0
offset_right = 1341.0
offset_bottom = 179.0
scale = Vector2(1, 1.19396)
theme_override_font_sizes/font_size = 100
text = "DesertGame 3D"
horizontal_alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 790.0
offset_top = 281.0
offset_right = 1237.0
offset_bottom = 344.0
scale = Vector2(0.719588, 1.81555)
theme_override_font_sizes/font_size = 40
text = "Iniciar Juego"

[node name="MenuContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.421
anchor_top = 0.413
anchor_right = 0.421
anchor_bottom = 0.413
offset_left = -8.32007
offset_top = -0.0400085
offset_right = 302.68
offset_bottom = 63.96

[node name="OptionsButton" type="Button" parent="MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Opciones"

[node name="ExitButton" type="Button" parent="MenuContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Salir al Escritorio"

[node name="DifficultyLabel" type="Label" parent="MenuContainer"]
layout_mode = 2
horizontal_alignment = 1

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MenuContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="MenuContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
